# scp-mcp

./: .editorconfig  .env.example  .env.template  .gitignore  ENV_README.md  LICENSE  Makefile  README.md  pyproject.toml
.ruler/: AGENTS.md  ruler.toml
scripts/: download_scp_folder.sh  dump_table.py  export_json.py  export_markdown.py  export_summary.py  import.py  setup-env.sh
src/scp_mcp/: Items.py  __init__.py  __main__.py  cli.py  config.py  database.py  main.py  models.py  server.py
src/scp_mcp/utils/: content_converter.py  data_loader.py
tests/: __init__.py  conftest.py  test_main.py  test_models.py
